salesforce-app/force-app/main/default/objects/Property__c/Property__c.object-meta.xml
<CustomObject>
    <label>Property</label>
    <pluralLabel>Properties</pluralLabel>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Represents a housing property available for applicants through Community Connect Foundation</description>
</CustomObject>