salesforce-app/force-app/main/default/objects/Property__c/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <label>Available</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>