salesforce-app/force-app/main/default/objects/Property__c/fields/Suburb__c.field-meta.xml
<CustomField>
    <fullName>Suburb__c</fullName>
    <label>Suburb</label>
    <type>Text</type>
    <length>80</length>
</CustomField>