salesforce-app/force-app/main/default/objects/Property__c/fields/Total_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Units__c</fullName>
    <label>Total Units</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>