salesforce-app/force-app/main/default/objects/Property__c/fields/Weekly_Rent__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Rent__c</fullName>
    <label>Weekly Rent</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>